--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,2 +1,5 @@
-buttonTextCreate =Create new product
-messageText=Product successfully created
+apptTitle=Ürün Yönetimi
+appDescription=Ürünlerinizi yönetin ve düzenleyin
+
+buttonTextCreate =Yeni ürün oluştur
+messageText={0} Ürün'ü başarıyla oluşturuldu
