fiori no data page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,5 +1,9 @@
 apptTitle=Ürün Yönetimi
 appDescription=Ürünlerinizi yönetin ve düzenleyin
-
+appTitle=Ürün Yönetimi2
 buttonTextCreate =Yeni ürün oluştur
 messageText={0} Ürün'ü başarıyla oluşturuldu
+noDataText=Henüz ürün eklenmedi
+listHeader=Ürün Listesi
+productName=Ürün Adı
+listItemTitle=Ürün 
