--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,4 +6,13 @@ messageText={0} Ürün'ü başarıyla oluşturuldu
 noDataText=Henüz ürün eklenmedi
 listHeader=Ürün Listesi
 productName=Ürün Adı
-listItemTitle=Ürün 
+listItemTitle=Ürün
+category=Kategori 
+price=Fiyat
+sktDate=SKT Tarihi
+AktarimDate=Aktarım Tarihi
+formTitle=Urun detayları
+formDate=Form Tarihleri
+createNewProduct= Yeni Ürün oluştur
+buttonTextCancel= Kapat
+buttonTextCreate= Kaydet
