--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,11 +2,13 @@ apptTitle=Ürün Yönetimi
 appDescription=Ürünlerinizi yönetin ve düzenleyin
 appTitle=Ürün Yönetimi2
 buttonTextCreate =Yeni ürün oluştur
+available=Mevcut
+unavailable=Mevcut Değil
+taze=Taze
 messageText={0} Ürün'ü başarıyla oluşturuldu
 noDataText=Henüz ürün eklenmedi
 listHeader=Ürün Listesi
 productName=Ürün Adı
-<<<<<<< Updated upstream
 listItemTitle=Ürün
 category=Kategori 
 price=Fiyat
@@ -17,6 +19,4 @@ formDate=Form Tarihleri
 createNewProduct= Yeni Ürün oluştur
 buttonTextCancel= Kapat
 buttonTextCreate= Kaydet
-=======
-listItemTitle=Ürün 
->>>>>>> Stashed changes
+
